package com.javastudy4.operation;

public interface LibraryOperation{
    void execute();
}